@@ -351,6 +351,10 @@ specifier|private
 name|TableHelper
 name|tArtistCt
 decl_stmt|;
+specifier|private
+name|TableHelper
+name|tPaintingInfo
+decl_stmt|;
 annotation|@
 name|Before
 specifier|public
@@ -401,8 +405,6 @@ name|dbHelper
 argument_list|,
 literal|"ARTIST_CT"
 argument_list|)
-expr_stmt|;
-name|tArtistCt
 operator|.
 name|setColumns
 argument_list|(
@@ -411,6 +413,34 @@ argument_list|,
 literal|"ARTIST_NAME"
 argument_list|,
 literal|"DATE_OF_BIRTH"
+argument_list|)
+expr_stmt|;
+name|tPaintingInfo
+operator|=
+operator|new
+name|TableHelper
+argument_list|(
+name|dbHelper
+argument_list|,
+literal|"PAINTING_INFO"
+argument_list|)
+operator|.
+name|setColumns
+argument_list|(
+literal|"PAINTING_ID"
+argument_list|,
+literal|"IMAGE_BLOB"
+argument_list|)
+operator|.
+name|setColumnTypes
+argument_list|(
+name|Types
+operator|.
+name|INTEGER
+argument_list|,
+name|Types
+operator|.
+name|LONGVARBINARY
 argument_list|)
 expr_stmt|;
 block|}
@@ -3079,6 +3109,76 @@ argument_list|)
 operator|.
 name|longValue
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testByteArray
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|byte
+index|[]
+name|data
+init|=
+block|{
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+decl_stmt|;
+name|tPainting
+operator|.
+name|insert
+argument_list|(
+literal|1
+argument_list|,
+literal|"test"
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|tPaintingInfo
+operator|.
+name|insert
+argument_list|(
+literal|1
+argument_list|,
+name|data
+argument_list|)
+expr_stmt|;
+name|byte
+index|[]
+name|bytes
+init|=
+name|SQLSelect
+operator|.
+name|scalarQuery
+argument_list|(
+literal|"SELECT IMAGE_BLOB FROM PAINTING_INFO"
+argument_list|,
+name|byte
+index|[]
+operator|.
+expr|class
+argument_list|)
+operator|.
+name|selectOne
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertArrayEquals
+argument_list|(
+name|data
+argument_list|,
+name|bytes
 argument_list|)
 expr_stmt|;
 block|}
